# course-dl

./: .env.example  .gitignore  README.md  pyproject.toml
src/course_dl/: __init__.py  __main__.py  auth.py  cli.py  config.py  exporter.py
tests/: test_config.py  test_fuzzy.py
